Penambhan Mockup Lagi

--- a/.htaccess
+++ b/.htaccess
@@ -8,6 +8,8 @@ RewriteRule ^auth/? ?p=auth
 RewriteRule ^profilpeserta/? ?p=profilpeserta
 RewriteRule ^kurikulumpeserta/? ?p=kurikulumpeserta
 RewriteRule ^modulbelajar/? ?p=modulbelajar
+RewriteRule ^soalpeserta/? ?p=soalpeserta
+
 
 
 RewriteRule ^home/? ?p=home
@@ -21,6 +23,8 @@ RewriteRule ^administrasi/? ?p=administrasi
 
 
 
+RewriteRule ^bukakelas/? ?p=bukakelas
+RewriteRule ^kepelatihan/? ?p=kepelatihan
 
 
 RewriteRule ^pendaftaran/? ?p=pendaftaran
