--- a/.htaccess
+++ b/.htaccess
@@ -8,6 +8,7 @@ RewriteRule ^auth/? ?p=auth
 RewriteRule ^profilpeserta/? ?p=profilpeserta
 RewriteRule ^kurikulumpeserta/? ?p=kurikulumpeserta
 RewriteRule ^modulbelajar/? ?p=modulbelajar
+RewriteRule ^assesmentpeserta/? ?p=assesmentpeserta
 
 
 RewriteRule ^home/? ?p=home
